--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "yourprojectname",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Your project description",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {    
     "build": "webpack --config webpack.config.js",
     "build:dev": "webpack --config webpack.config.dev.js",
-    "build:npm": "webpack --config webpack.config.npm.js"
+    "build:npm": "tsc"
   },
   "keywords": [
     "Typescript"
