--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "target": "es5",
     "allowJs": true,
     "declaration": true,
+    "strictNullChecks": true,
     "moduleResolution": "node",
     "plugins": [{ "name": "typescript-plugin-css-modules" }]
   },
