--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yourprojectname",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Your project description",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -19,6 +19,7 @@
     "css-loader": "^5.0.1",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.14",
+    "raw-loader": "^4.0.2",
     "typescript": "^4.1.3",
     "typescript-plugin-css-modules": "^3.1.0",
     "webpack": "^5.17.0",
