--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
   "name": "yourprojectname",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "Your project description",
   "main": "lib/index.js",
-  "types": "lib/index.d.ts",
-  "scripts": {    
+  "module": "lib-es6/index.js",
+  "types": "lib-es6/index.d.ts",
+  "scripts": {
     "build": "webpack --config webpack.config.js",
     "build:dev": "webpack --config webpack.config.dev.js",
-    "build:npm": "webpack --config webpack.config.npm.js",
-    "build:npm-es6": "tsc"
+    "prebuild:npm": "rimraf lib/ && rimraf lib-es6/",
+    "build:npm": "webpack --config webpack.config.npm.js && tsc",
+    "postbuild:npm": "copyfiles -u 1 src/**/*.svg src/**/*.css lib-es6/"
   },
   "keywords": [
     "Typescript"
   ],
   "author": "Your Name",
-  "license": "BSD-2-Clause",  
+  "license": "BSD-2-Clause",
   "devDependencies": {
+    "copyfiles": "^2.4.1",
+    "rimraf": "^3.0.2",
     "css-loader": "^5.0.1",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.14",
