--- a/tsconfig.webpack.json
+++ b/tsconfig.webpack.json
@@ -1,14 +1,12 @@
 {
   "compilerOptions": {
-    "outDir": "./lib-es6/",
+    "outDir": "./lib/",
     "noImplicitAny": true,
-    "module": "es6",
+    "module": "CommonJS",
     "target": "es5",
     "allowJs": true,
-    "declaration": true,
     "strictNullChecks": true,
     "moduleResolution": "node",
-    "plugins": [{ "name": "typescript-plugin-css-modules" }]
   },
   "include": ["src"],  
 }
