--- a/package.json
+++ b/package.json
@@ -1,32 +1,18 @@
 {
-  "name": "yourprojectname",
-  "version": "1.1.0",
-  "description": "Your project description",
-  "main": "lib/index.js",
-  "module": "lib-es6/index.js",
-  "types": "lib-es6/index.d.ts",
+  "name": "libname",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "main": "lib-cjs/index.cjs",
+  "module": "lib/index.js",
+  "types": "lib-types",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
-    "build:dev": "webpack --config webpack.config.dev.js",
-    "prebuild:npm": "rimraf lib/ && rimraf lib-es6/",
-    "build:npm": "webpack --config webpack.config.npm.js && tsc",
-    "postbuild:npm": "copyfiles -u 1 src/**/*.svg src/**/*.css lib-es6/"
+    "dev": "vite",
+    "build": "tsc --build --clean && tsc && vite build"
   },
-  "keywords": [
-    "Typescript"
-  ],
-  "author": "Your Name",
-  "license": "BSD-2-Clause",
   "devDependencies": {
-    "copyfiles": "^2.4.1",
-    "css-loader": "^5.0.1",
-    "raw-loader": "^4.0.2",
-    "rimraf": "^3.0.2",
-    "style-loader": "^2.0.0",
-    "ts-loader": "^8.0.14",
-    "typescript": "^4.1.3",
-    "typescript-plugin-css-modules": "^5.0.0",
-    "webpack": "^5.17.0",
-    "webpack-cli": "^4.3.1"
+    "typescript": "^5.2.2",
+    "vite": "^5.2.0",
+    "@rollup/plugin-strip": "^3.0.4"
   }
 }
