--- a/package.json
+++ b/package.json
@@ -8,11 +8,17 @@
   "types": "lib-types",
   "scripts": {
     "dev": "vite",
-    "build": "tsc --build --clean && tsc && vite build"
+    "build": "tsc --build --clean && tsc && vite build",
+    "prepare": "ts-patch install && typia patch"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
-    "vite": "^5.2.0",
-    "@rollup/plugin-strip": "^3.0.4"
+    "@rollup/plugin-strip": "^3.0.4",
+    "@ryoppippi/unplugin-typia": "^1.1.0",
+    "ts-patch": "^3.3.0",
+    "typescript": "~5.7.2",
+    "vite": "^5.2.0"
+  },
+  "dependencies": {
+    "typia": "^7.5.0"
   }
 }
