--- a/{{cookiecutter.project_slug}}/package.json
+++ b/{{cookiecutter.project_slug}}/package.json
@@ -3,10 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-{% if cookiecutter.project_type == "cjs" -%}
+{%- if cookiecutter.project_type == "cjs" or cookiecutter.project_type == "all" %}
   "main": "lib-cjs/index.cjs",
 {%- endif %}
-{% if cookiecutter.project_type == "esm" -%}
+{%- if cookiecutter.project_type == "esm" or cookiecutter.project_type == "all" %}
   "module": "lib/index.js",
 {%- endif %}
   "types": "lib-types",
